--- a/index.html
+++ b/index.html
@@ -121,15 +121,16 @@
           >Project Repository</a
         >
       </p>
-    </section>
-
-    <section id="video">
-      <h2>Project Video</h2>
-      <video controls>
-        <source src="ProjcetBank.mp4" type="video/mp4" />
-        Your browser does not support the video tag.
-      </video>
-    </section>
+      <section id="video">
+        <h2>Project Video</h2>
+        <video controls>
+          <source 
+            src="Bank.mp4"
+            type="video/mp4"
+          />
+          Your browser does not support the video tag.
+        </video>
+      </section>
     <script>
       function closeIntro() {
         document.getElementById("intro").style.display = "none";
